<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/warehouse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="20sp"
        android:padding="4dp"
        android:theme="@style/Base.Theme.EasyInventoryClient"
        android:textColor="?attr/app_text_color"/>

    <TextView
        android:id="@+id/storage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="20sp"
        android:padding="4dp"
        android:theme="@style/Base.Theme.EasyInventoryClient"
        android:textColor="?attr/app_text_color"/>

    <TextView
        android:id="@+id/item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="20sp"
        android:padding="4dp"
        android:theme="@style/Base.Theme.EasyInventoryClient"
        android:textColor="?attr/app_text_color"/>

    <TextView
        android:id="@+id/lot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="20sp"
        android:padding="4dp"
        android:theme="@style/Base.Theme.EasyInventoryClient"
        android:textColor="?attr/app_text_color"/>

    <TextView
        android:id="@+id/serial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="20sp"
        android:padding="4dp"
        android:theme="@style/Base.Theme.EasyInventoryClient"
        android:textColor="?attr/app_text_color"/>

    <TextView
        android:id="@+id/amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="20sp"
        android:padding="4dp"
        android:theme="@style/Base.Theme.EasyInventoryClient"
        android:textColor="?attr/app_text_color"/>

    <TextView
        android:id="@+id/available"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="20sp"
        android:padding="4dp"
        android:theme="@style/Base.Theme.EasyInventoryClient"
        android:textColor="?attr/app_text_color"/>
</TableRow>
